<resources>
    <string name="facebook_app_id">1280112865467616</string>
    <string name="fb_login_protocol_scheme">fb1280112865467616</string>

    <string name="app_name">SpotMe</string>
    <string name="drawer_open">drawer open</string>
    <string name="drawer_close">drawer close</string>
    <string name="app_desc">Spotme helps you discover promotion, Buy item online and get information from your favourite Mall</string>

    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in_desc">Sign in with your email to get latest promotion and information from SPOTME</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="ok">Ok</string>
    <string name="search_hint">Pencarian Berdasarkan</string>
    <string name="deals">deals</string>
    <string name="recommendation">Rekomendasi</string>
    <string name="popular">popular</string>
    <string name="flash_sale">Flash Sale</string>
    <string name="result_not_found">Result Not Found</string>
    <string name="view_more">View More</string>
    <string name="exclusive_deals">Exclusive Deals</string>
    <string name="with">Dengan</string>
    <string name="parking">Parking</string>

    <string name="label_parkir">PARKIR</string>
    <string name="label_promosi">PROMOSI</string>
    <string name="label_navigasi">NAVIGASI</string>
    <string name="label_menu_member">MEMBER</string>
    <string name="label_belanja">BELANJA</string>
    <string name="label_uang">UANG</string>
    <string name="label_market">MARKET</string>
    <string name="label_explorer">EXPLORER</string>
    <string name="label_available_space">%1$d Available</string>

    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_edit_profile">EditProfileActivity</string>
    <string name="label_menu_event">EVENT</string>
    <string name="name">Nama</string>
    <string name="about_and_contact">About and contact</string>
    <string name="profile">Profile</string>
    <string name="history_parkir">History Parkir</string>
    <string name="sign_out">Sign Out</string>
    <string name="title_activity_history_parkir">HistoryParkirActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pesanan_parkir">Pesanan Parkir</string>
    <string name="default_phone">087825382796</string>
    <string name="selesai">Selesai</string>
    <string name="masukkan_kode_verifikasi">Masukkan Kode Verifikasi</string>
    <string name="transaksi">Transaksi</string>
    <string name="nama_user">Nama user</string>
    <string name="id_parkir">Id Parkir</string>
    <string name="proses">Proses</string>
    <string name="spotme">SPOTME</string>
    <string name="reserve_a_lot">RESERVE A LOT</string>
    <string name="mpv">MPV</string>
    <string name="suv">SUV</string>
    <string name="sedan">SEDAN</string>
    <string name="parkir_location">Parkir Location</string>
    <string name="feeds">Feeds</string>
    <string name="default_name">Ihsan Abdurahman</string>
    <string name="akun">Akun</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="logout">Logout</string>
    <string name="ihsan_abdurahman">Ihsan Abdurahman</string>
    <string name="kontak">Kontak</string>
    <string name="cara_menggunakan">Cara Menggunakan</string>
    <string name="kendaraan">Kendaraan</string>
    <string name="no_telepon">No. Telepon</string>
    <string name="email">Email</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="tempat_tanggal_lahir">Tempat Tanggal Lahir</string>
    <string name="simpan">Simpan</string>
    <string name="tambah_list_mobil">Tambah List Mobil</string>
    <string name="tibe_mobil">Tipe Mobil</string>
    <string name="warna_kendaraan">Warna Kendaraan</string>
    <string name="plat_nomor">Plat Nomor</string>
    <string name="ada_yang_bisa_dibantu">Ada yang bisa dibantu?</string>
    <string name="kirim">Kirim</string>
    <string name="kata_sandi_lama">Kata Sandi Lama</string>
    <string name="password_baru">Kata Sandi Baru</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="komfirmasi_kata_sandi_baru">Komfirmasi Kata Sandi Baru</string>
    <string name="suv_hitam">SUV | HITAM</string>
    <string name="b_5202_ztb">B 5202 ZTB</string>
    <string name="edit">EDIT</string>
    <string name="choose_parkir_location">Choose Parkir Location</string>
    <string name="find">Find</string>
    <string name="pilih">Pilih</string>
    <string name="plat_no">Plat No</string>
    <string name="_2_days">2 Days</string>
    <string name="default_text">aku</string>

</resources>
