<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dimen250dp"
    android:orientation="vertical"
    tools:context="com.sumroch.spotme.dialog.DialogParkir">

    <include layout="@layout/header_detail" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dat_plat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/chip_height"
            android:text="@string/plat_no"
            android:textColor="@color/black"
            android:textSize="@dimen/textSize16sp"
            android:textStyle="bold|italic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/dimen8">

            <Button
                android:id="@+id/edit_plat"
                android:layout_width="0dp"
                android:background="@color/color_buttondetail"
                android:textColor="@color/white"
                android:textSize="@dimen/textSize16sp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/edit" />

            <Button
                android:id="@+id/pilih_plat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:textSize="@dimen/textSize16sp"
                android:background="@color/color_buttondetail"
                android:textColor="@color/white"
                android:layout_marginLeft="@dimen/dimen8"
                android:text="@string/pilih" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
