<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.parkir.history.DetailParkirActivity">
    <include layout="@layout/header_detail" />
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="90dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:src="@drawable/parkir_grid" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="7"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pesanan_parkir"
                    android:textSize="@dimen/textSize20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tanggal_masuk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pesanan_parkir"
                    android:textSize="@dimen/textSize14sp" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/txt_name_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textSize="@dimen/textSize14sp"
        android:paddingLeft="@dimen/textSize20sp"
        android:text="@string/default_name" />

    <TextView
        android:id="@+id/txt_phone_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/textSize20sp"
        android:text="@string/default_phone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:src="@drawable/lokasi" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="7"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_lokasi_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pesanan_parkir"
                android:textSize="@dimen/textSize14sp" />


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:src="@drawable/mobil" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="7"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_mobil_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pesanan_parkir"
                android:textSize="@dimen/textSize14sp" />

            <TextView
                android:id="@+id/txt_platmbl_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pesanan_parkir"
                android:textSize="@dimen/textSize14sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:src="@drawable/cek" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="7"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_status_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pesanan_parkir"
                android:textSize="@dimen/textSize14sp" />


        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <Button
            android:id="@+id/btn_selesai"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/color_buttondetail"
            android:text="@string/selesai"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>